Web Inspector: Canvas: show warning when path moves offscreen https://bugs.webkit.org/show_bug.cgi?id=191016
Reviewed by Joseph Pecoraro.

* UserInterface/Models/RecordingAction.js:
(WI.RecordingAction):
(WI.RecordingAction.deriveCurrentState):
(WI.RecordingAction.prototype.get isVisual):
(WI.RecordingAction.prototype.get warning): Added.
(WI.RecordingAction.prototype.process.checkInvalidCurrentAxisPoint): Added.
(WI.RecordingAction.prototype.process):
(WI.RecordingAction.prototype.get hasVisibleEffect): Deleted.
Replace `hasVisibleEffect` with a more general `warning` value, so that it can be used for
more types of warnings.

* UserInterface/Views/RecordingActionTreeElement.js:
(WI.RecordingActionTreeElement.prototype.onattach):
* UserInterface/Views/RecordingActionTreeElement.css:
(.item.action.visual.warning:not(.invalid) > .status > .warning): Added.
(.item.action.visual.no-visible-effect:not(.invalid) > .status > .warning): Deleted.

* Localizations/en.lproj/localizedStrings.js:


Canonical link: https://commits.webkit.org/205864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237574 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/RecordingActionTreeElement.css
+++ b/Source/WebInspectorUI/UserInterface/Views/RecordingActionTreeElement.css
@@ -220,7 +220,7 @@ body[dir=rtl] .tree-outline:not(.hide-disclosure-buttons) .item.action:not(.init
     content: url(../Images/Error.svg);
 }
 
-.item.action.visual.no-visible-effect:not(.invalid) > .status > .warning {
+.item.action.warning:not(.invalid) > .status > .warning {
     width: 12px;
     height: 12px;
     margin-top: 2px;
